Solved day 2 (in Java)